[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ashkv"
version = "0.1.0"
description = "GPU-resident INT8 shadow KV cache manager for LLM inference"
authors = [
    {name = "ASH-KV Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]
gpu = [
    "torch>=2.0.0",
    "triton>=2.1.0",
    "sglang>=0.3.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ashkv", "ashkv.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
